--- a/notes-alinen/notes-oct24.adoc
+++ b/notes-alinen/notes-oct24.adoc
@@ -4,3 +4,7 @@ include::header.adoc[]
 :Revision: 0.1
 
 = {title}
+
+link:https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=6f7be79e-d21e-4bdf-96df-af38013aabde[Lecture - Mon]
+
+link:https://github.com/BrynMawr-CS113-F22/class-examples-normoyle/tree/main/week09-oct24[Class Examples]
